tests/type-errors/14-annot-mismatch-lambda.flt
// Type annotation mismatch: lambda annotated with incompatible type
// --- Command: dotnet run --project FunLang -- --emit-type --expr "(fun x -> x + 1 : bool -> bool)" 2>&1
// --- ExitCode: 1
// --- Output:
error[E0301]: Type mismatch: expected bool but got int
 --> <expr>:1:10-11
   = due to annotation: <expr>:1:0-31
   = note: expected bool -> bool due to annotation at <expr>:1:0-31
   = hint: The type annotation at <expr>:1:0-31 expects bool
